Fixes WCAG contrast violations

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -36,7 +36,7 @@
   font-size: 1.2rem;
   margin-top: -.5rem;
   margin-bottom: var(--spacer);
-  color: var(--gray);
+  color: var(--contrast-wcag);
 }
 
 // A stylized reference link to a post
@@ -66,7 +66,7 @@
     flex: none;
     margin-top: 0;
     margin-bottom: 0;
-    color: var(--gray);
+    color: var(--contrast-wcag);
   }
 
   @media (min-width: variables.$breakpoint-md) {
